--- a/lecturenotes/week7notes.html
+++ b/lecturenotes/week7notes.html
@@ -13,7 +13,12 @@
     <style>
         h1 {color:#7eff7e;} /*hex*/
         a:hover {color: #ff00d4;} /* psuedo selector - works on a state of an element */
-        body {background-color: #efefef;}
+
+        body {
+            background-color: #efefef;
+            background-image: none;
+            background-size: 10%;
+        }
     </style>
 </head>
 </body>
