--- a/lecturenotes/week7notes.html
+++ b/lecturenotes/week7notes.html
@@ -4,22 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
-<body>
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewpoert" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <style>
-        h1 {color:#7eff7e;} /*hex*/
+         h1 {color:#7eff7e;} /*hex*/
         a:hover {color: #ff00d4;} /* psuedo selector - works on a state of an element */
 
         body {
             background-color: #efefef;
             background-image: none;
-            background-size: 10%;
+            background-size: 50%;
+        }
+        p {
+            background-color: #53b7c6;
+            padding: 10px;
+            border: 2px solid #eeeeee;
+            margin: 40px;
         }
     </style>
 </head>
-</body>
 </html>
