--- a/lecturenotes/week7notes.html
+++ b/lecturenotes/week7notes.html
@@ -10,7 +10,7 @@
 
         body {
             background-color: #efefef;
-            background-image: none;
+            background-image: url("../images/IMG_3787\ \(2\).GIF");
             background-size: 50%;
         }
         p {
@@ -20,5 +20,13 @@
             margin: 40px;
         }
     </style>
+  
 </head>
+<body>
+    <h1>Week 7 Notes</h1>
+    <a href="http://www.amazon.com">Amazon</a>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis necessitatibus suscipit, fugit minima quam quasi vitae eos doloribus qui deleniti, enim assumenda consequatur quo illum maiores similique dolor reprehenderit deserunt.</p>
+
+
+</body>
 </html>
