--- a/lab7/skills.html
+++ b/lab7/skills.html
@@ -10,7 +10,7 @@
             <head>
                 <meta charset="utf-8">
                 <title>Week 4 Forms and Tables</title>
-                <link rel="stylesheet" href="style.css">
+                <link rel="stylesheet" href="styles.css">
                 <style>
                     td, th {border: 1px solid black;}
                 </style>
