--- a/lab7/contact.html
+++ b/lab7/contact.html
@@ -6,6 +6,11 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="skills.html">skills</a>
+            <a href="contact.html">Contact</a>
+        </nav>
         <h1> Contact</h1>
         <p>Abdi Osman</p>
         <p>Syracuse University</p>
@@ -16,7 +21,9 @@
         <a href="mailto:abosman@syr.edu">Abdi Osman Email</a><br>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11664.104713083101!2d-76.15324854458011!3d43.0408807!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f39f5e468f11%3A0xb34067c84771a752!2sSyracuse%20University%20Residence%20Life!5e0!3m2!1sen!2sus!4v1694816809537!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></iframe>
         <h2>Forms</h2>
-    <form action="https://formspree.io/f/xaygppew" method="post">
+        <label>Personal Bio:</label><br>
+            <textarea id="bio" name="bio" rows="3" cols="60"></textarea><br>
+        <form action="https://formspree.io/f/xaygppew" method="post">
         <label for="fullname">Visitor Name:</label>
         <input type="text" id="fullname" name="Full Name"> <br> <!-- block go to the next line and have margin around them  -->
         <label for="instructions">Additinal Info:</label><br>
