--- a/lab8/contact.html
+++ b/lab8/contact.html
@@ -6,10 +6,9 @@
         <link rel="stylesheet" href="styles.css">
         <style>
         body {
-            font-family: Arial, sans-serif;
-            magin: 0;
-        }
-
+             font-family: Arial, sans-serif,
+             magin 0;
+         } 
         nav {
             background-color: #E5C3A6;
             color: white;
@@ -36,9 +35,9 @@
 
         
         iframe {
-            width: 100%
-            height: 100%
-            border: 0;
+            width: 100% 
+            height 100%
+            border 0;
         }
 
         form {
@@ -52,8 +51,8 @@
         footer {
             background-color: #333;
             color: white
-            text-align: center;
-            padding: 10px:
+            text-align center;
+            padding: 10px;
         }
         </style>
 
