--- a/lecturenotes/week10participation.html
+++ b/lecturenotes/week10participation.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Unit 10 Notes Responsive Design</title>
+    <title>Week 10 Participation</title>
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
