--- a/lab10/index.html
+++ b/lab10/index.html
@@ -15,6 +15,7 @@
             <h1> Abdi Osman Biography</h1>
             <h2> Personal Info</h2>
 
+            <a><img src="../images/Otto.jfif" width="350px" height="250px" alt="otto"></a><br>
             <p> Im from <strong> Buffalo, NY </strong> im currently a sophmore in the Ischool studying IMT. I like to drive dirtbikes for fun and hangout with my friends on the free time. I not really a social person however I can be, when you get to know me you would learn to appreciate my antics.</p>
 
             <h3>Personal Hobbies</h3>
