--- a/lab11/contact.html
+++ b/lab11/contact.html
@@ -4,7 +4,55 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="tablet-styles.css">
     <style>
-        /* Your existing CSS styles */
+           body {
+             font-family: Arial, sans-serif;
+             margin: 0;
+         } 
+        nav {
+            background-color: #E5C3A6;
+            color: white;
+            padding: 10px;
+        }
+
+        .row1 {
+            display: flex;
+        }
+
+        .column1, .colums2 {
+            flex: 1;
+            padding: 20px;
+        }
+
+        .row2 {
+            display: flex;
+        }
+
+        .column3, .column4 {
+            flex: 1;
+            padding: 20px
+        }
+
+        
+        iframe {
+            width: 100%;
+            height: 100%;
+            border: 0;
+        }
+
+        form {
+            margin-top: 20px;
+        }
+
+        textarea, input, select {
+            margin-bottom: 10px;
+        }
+
+        footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 10px;
+        }
     </style>
 </head>
 <body>
