--- a/lab12/lab12.html
+++ b/lab12/lab12.html
@@ -25,12 +25,13 @@
     #second {order: 2;}
     #third {order:3;}
   </style>
+  <div id="message"></div>
 </head>
 <body onload="ShuffleShells();">
   <h1>Choose a Walnut</h1>
   <img src="https://laferger.github.io/ist263/images/walnut.png" alt="first walnut" class="first"  onclick="WinnerMessage();">
   <img src="https://laferger.github.io/ist263/images/walnut.png" alt="second walnut" class="second" onclick="TryAgain();">
-  <img src="https://laferger.github.io/ist263/images/walnut.png" alt="third walnut" class="third" onclick="TryAgain();"><br>
+  <img src="https://laferger.github.io/ist263/images/walnut.png" alt="third walnut" class="third"onclick="TryAgain();"><br>
   <a onclick="ThirdFunction();" href="">Click Here</a>
 </body>
 </html>
