--- a/lab12/lab12.html
+++ b/lab12/lab12.html
@@ -6,32 +6,34 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lab 12</title>
   <link rel="stylesheet" href="https://laferger.github.io/ist263/images/animate.css">
- <script>
-  function WinnerMessage () {
-    document.getElementById("messages").innerHTML='You Won'
-  }
-  function TryAgain () {
-    document.getElementById("messages").innerHTML='Wrong Shell - Try Again';
-  }
-  function ShuffleShells() {
-    document.getElementById("first").style.order= Math.floor( (Math.random() *3) + 2);
-  }
-  </script>
   <style>
     .container {
       display: flex;
     }
     #first {order: 1;}
     #second {order: 2;}
-    #third {order:3;}
+    #third {order: 3;}
   </style>
-  <div id="message"></div>
 </head>
 <body onload="ShuffleShells();">
   <h1>Choose a Walnut</h1>
-  <img src="https://laferger.github.io/ist263/images/walnut.png" alt="first walnut" class="first"  onclick="WinnerMessage();">
+  <div id="messages"></div> 
+  <img src="https://laferger.github.io/ist263/images/walnut.png" alt="first walnut" class="first" onclick="WinnerMessage();">
   <img src="https://laferger.github.io/ist263/images/walnut.png" alt="second walnut" class="second" onclick="TryAgain();">
-  <img src="https://laferger.github.io/ist263/images/walnut.png" alt="third walnut" class="third"onclick="TryAgain();"><br>
-  <a onclick="ThirdFunction();" href="">Click Here</a>
+  <img src="https://laferger.github.io/ist263/images/walnut.png" alt="third walnut" class="third" onclick="TryAgain();"><br>
+  
+  <script>
+    function WinnerMessage() {
+      document.getElementById("messages").innerHTML = 'You Won';
+    }
+    
+    function TryAgain() {
+      document.getElementById("messages").innerHTML = 'Wrong Shell - Try Again';
+    }
+    
+    function ShuffleShells() {
+      document.getElementsByClassName("first")[0].style.order = Math.floor((Math.random() * 3) + 1);
+    }
+  </script>
 </body>
 </html>
