--- a/project4/oers.html
+++ b/project4/oers.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Osman Rentals</title>
     <style>
+        body {
+            background-color: skyblue;
+        }
         .centered-text {
             text-align: center;
         }
@@ -26,9 +29,11 @@
             <input type="name" id="name" name="name"> 
             <label for="car-selection">Select a Car:</label>
             <select id="car-selection" name="car-selection">
-                <option value="car1">Car 1</option>
-                <option value="car2">Car 2</option>
-                <option value="car3">Car 3</option>
+                <option value="Car 1">Bentley Bentayga</option>
+                <option value="Car 2">Lamborghini Urus</option>
+                <option value="Car 3">Mercedes Maybach</option>
+                <option value="Car 4">Mclaren 720s</option>
+                <option value="Car 5">Rolls Royce Ghost</option>
             </select>
             <label for="date">Date:</label>
             <input type="date" id="date" name="date">
@@ -38,6 +43,7 @@
         </form>
     </div>
     <nav>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11664.104713083101!2d-76.15324854458011!3d43.0408807!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f39f5e468f11%3A0xb34067c84771a752!2sSyracuse%20University%20Residence%20Life!5e0!3m2!1sen!2sus!4v1694816809537!5m2!1sen!2sus" width="50%" height="225" style="border: 0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="hhttps://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11664.104713083101!2d-76.15324854458011!3d43.0408807!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f39f5e468f11%3A0xb34067c84771a752!2sSyracuse%20University%20Residence%20Life!5e0!3m2!1sen!2sus!4v1694816809537!5m2!1sen!2sus" width="50%" height="225" style="border: 0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </nav>
 </body>
+</html>
