--- a/project4/oers.html
+++ b/project4/oers.html
@@ -75,5 +75,16 @@
         <a onclick="showCarDetails('Mclaren 720s', 1200)">Mclaren 720s<img class="smallSize" src="../project/media/mclaren.jfif" alt="home"></a><br>
         <a onclick="showCarDetails('Rolls Royce Ghost', 1200)">Rolls Royce Ghost<img class="smallSize" src="../project/media/rolls.jpg" alt="home"></a>
     </nav>
+    <div id="about-us">
+        <h2>About Us</h2>
+        <p>Welcome to Osman’s Exotic Rentals, your premium luxury car rental service provider. We specialize in offering high-end luxury and exotic cars for rent at competitive prices. Our fleet includes the latest models from top brands, ensuring an unparalleled driving experience for our clients.</p>
+        <p>Contact Information:</p>
+        <ul>
+            <li>Address: 123 Main Street, Miami, Florida, 11210</li>
+            <li>Phone: +123-456-7890</li>
+            <li>Email: osmanrentals@gmail.com</li>
+        </ul>
+        Were glad to annouce a few of our services that aim to change our customers experience with how they interact with our services. By boosting their overall experiences we offer packages that include chofers, package deal that hep you save on your next purchase as well as delivery options if you cant be there for instore pick up.
+    </div>
 </body>
 </html>
