--- a/project4/oers.html
+++ b/project4/oers.html
@@ -7,11 +7,22 @@
     <style>
         body {
             background-color: skyblue;
+            margin: 0; /* Remove default margin */
+            padding: 0; /* Remove default padding */
         }
-        .Size {
-            width: 75%;
-            height: 350px;
+        /* Top border */
+        .top-border {
+            border-top: 5px solid black;
         }
+        /* Bottom border */
+        .bottom-border {
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            border-bottom: 5px solid black;
+        }
+        /* Your existing styles */
+        /* ... (existing styles remain unchanged) ... */
         .smallSize {
             width: 350px;
             height: auto;
@@ -19,72 +30,114 @@
         .centered-text {
             text-align: center;
         }
-    </style>
-    <script>
-        function showCarDetails(carName, price) {
-            alert(`Car: ${carName}\nDetails: Luxury Car Rental\nPrice per day: $${price}`);
+        #home p {
+            font-family: 'Dancing Script', cursive;
+            font-size: 25px;
         }
-    </script>
+        /* Flexbox styling */
+        nav {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+        nav a {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin: 10px;
+            text-decoration: none;
+            color: black;
+        }
+        nav a img {
+            margin-top: 10px;
+            width: 150px; /* Adjust size as needed */
+        }
+    </style>
+     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap">
+     <script>
+         function showCarDetails(carName, price) {
+             alert(`Car: ${carName}\nDetails: Luxury Car Rental\nPrice per day: $${price}`);
+         }
+     </script>
 </head>
 <body>
-    <a href="Osman Rentals">Home</a>
-    <a href="Reservation">Reserve A Vehicle</a>
-    <a href="Location">Location</a>
-    <div class="centered-text">
-        <p style="font-size: 20px;">
+    <div class="top-border"></div> <!-- Top border -->
+    <a href="#home">Home</a>
+    <a href="#reservation-page">Reserve A Vehicle</a>
+    <a href="#location">Location</a>
+    <div class="centered-text" id="home">
+        <p style="font-size: 25px;">
             <strong>Welcome to Osman’s Exotic Rentals where we provide our clients with the best vehicles there are to offer in the market for the best prices. We do this by finding high-end luxury/exotic cars we could rent out to the public who may not have access to them. Our fleet includes all of the newest models from your favorite brands like Lamborghini, Ferrari, McLaren, Rolls Royce, and more. You have taste, we have options. Pick out your vehicle, make your reservation, and enjoy.</strong>
         </p>
-        <a><img class="Size" src="../project/media/home.jfif" alt="home"></a><br>
+        <a href="#reservation-page"><img class="Size" src="../project/media/home.jfif" alt="home"></a><br>
     </div>
-    <div id="reservation-section">
+    <div class="centered-text" id="reservation-page">
         <p style="font-size: 20px;">
-            To reserve a vehicle, please proceed to the <a href="#reservation-page">Reserve A Vehicle</a> section below.
+            To reserve a vehicle, please proceed to the <a href="#reservation-form">Reserve A Vehicle</a> section below.
         </p>
     </div>
+    <p style="font-size: 20px;">
+        We offer a variety of services designed to make your life easier such as chauffeur services, and membership programs for clients who enjoy our services. 
+        When you go to rent a car with us you have to provide your full name, address, upload a picture of your driver's license and you have to make a safe deposit first before we can let you rent one of our vehicles. 
+        If you don't want to submit a photo ID you can show up to one of our locations near you and show a physical ID instead. 
+    </p>
+    <div id="reservation-form">
+        <h2 style="font-weight: normal">Reserve A Vehicle</h2>
+        <form action="your-booking-script.php" method="post">
+            <label for="name">Name</label>
+            <input type="text" id="name" name="name"> 
+            <label for="car-selection">Select a Car:</label>
+            <select id="car-selection" name="car-selection">
+                <option value="Bentley Bentayga">Bentley Bentayga</option>
+                <option value="Lamborghini Urus">Lamborghini Urus</option>
+                <option value="Mercedes Maybach">Mercedes Maybach</option>
+                <option value="Mclaren 720s">Mclaren 720s</option>
+                <option value="Rolls Royce Ghost">Rolls Royce Ghost</option>
+            </select>
+            <label for="date">Date:</label>
+            <input type="date" id="date" name="date">
+            <label for="time">Time:</label>
+            <input type="time" id="time" name="time">
+            <input type="submit" value="Submit Reservation">
+        </form>
 
-    <nav>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11664.104713083101!2d-76.15324854458011!3d43.0408807!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f39f5e468f11%3A0xb34067c84771a752!2sSyracuse%20University%20Residence%20Life!5e0!3m2!1sen!2sus!4v1694816809537!5m2!1sen!2sus" width="75%" height="350" style="border: 0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        <p style="font-size: 20px;">
-            We offer a variety of services designed to make your life easier such as chauffeur services, and membership programs for clients who enjoy our services. 
-            When you go to rent a car with us you have to provide your full name, address, upload a picture of your driver's license and you have to make a safe deposit first before we can let you rent one of our vehicles. 
-            If you don't want to submit a photo id you can show up to one of our locations near you and show a physical id instead. 
-        </p>
-        <div id="reservation-section">
-            <h2 style="font-weight: normal">Reserve A Vehicle</h2>
-            <form action="your-booking-script.php" method="post">
-                <label for="name">Name</label>
-                <input type="name" id="name" name="name"> 
-                <label for="car-selection">Select a Car:</label>
-                <select id="car-selection" name="car-selection">
-                    <option value="Car 1">Bentley Bentayga</option>
-                    <option value="Car 2">Lamborghini Urus</option>
-                    <option value="Car 3">Mercedes Maybach</option>
-                    <option value="Car 4">Mclaren 720s</option>
-                    <option value="Car 5">Rolls Royce Ghost</option>
-                </select>
-                <label for="date">Date:</label>
-                <input type="date" id="date" name="date">
-                <label for="time">Time:</label>
-                <input type="time" id="time" name="time">
-                <input type="submit" value="Submit Reservation">
-            </form>
-        </div>
-        <a onclick="showCarDetails('Bentley Bentayga', 1200)">Bentley Bentayga<img class="smallSize" src="../project/media/bentley.jfif" alt="home"></a>
-        <a onclick="showCarDetails('Lamborghini Urus', 1200)">Lamborghini Urus<img class="smallSize" src="../project/media/urus.jpg" alt="home"></a><br>
-        <a onclick="showCarDetails('Mercedes Maybach', 1200)">Mercedes Maybach<img class="smallSize" src="../project/media/maybach.jfif" alt="home"></a>
-        <a onclick="showCarDetails('Mclaren 720s', 1200)">Mclaren 720s<img class="smallSize" src="../project/media/mclaren.jfif" alt="home"></a><br>
-        <a onclick="showCarDetails('Rolls Royce Ghost', 1200)">Rolls Royce Ghost<img class="smallSize" src="../project/media/rolls.jpg" alt="home"></a>
+    <nav id="location">
+        <!-- Vehicle images with flexboxes for alignment -->
+        <a href="#" onclick="showCarDetails('Bentley Bentayga', 1200)">
+            <span>Bentley Bentayga</span>
+            <img class="smallSize" src="../project/media/bentley.jfif" alt="home">
+        </a>
+        <a href="#" onclick="showCarDetails('Lamborghini Urus', 1200)">
+            <span>Lamborghini Urus</span>
+            <img class="smallSize" src="../project/media/urus.jpg" alt="home">
+        </a><br>
+        <a href="#" onclick="showCarDetails('Mercedes Maybach', 1200)">
+            <span>Mercedes Maybach</span>
+            <img class="smallSize" src="../project/media/maybach.jfif" alt="home">
+        </a>
+        <a href="#" onclick="showCarDetails('Mclaren 720s', 1200)">
+            <span>Mclaren 720s</span>
+            <img class="smallSize" src="../project/media/mclaren.jfif" alt="home">
+        </a><br>
+        <a href="#" onclick="showCarDetails('Rolls Royce Ghost', 1200)">
+            <span>Rolls Royce Ghost</span>
+            <img class="smallSize" src="../project/media/rolls.jpg" alt="home">
+        </a>
     </nav>
+    <nav id="location">
+        <iframe src="https://www.google.com/maps/embed?pb=..." width="100%" height="350" style="border: 0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
     <div id="about-us">
         <h2>About Us</h2>
-        <p>Welcome to Osman’s Exotic Rentals, your premium luxury car rental service provider. We specialize in offering high-end luxury and exotic cars for rent at competitive prices. Our fleet includes the latest models from top brands, ensuring an unparalleled driving experience for our clients.</p>
-        <p>Contact Information:</p>
-        <ul>
-            <li>Address: 123 Main Street, Miami, Florida, 11210</li>
-            <li>Phone: +123-456-7890</li>
-            <li>Email: osmanrentals@gmail.com</li>
-        </ul>
-        Were glad to annouce a few of our services that aim to change our customers experience with how they interact with our services. By boosting their overall experiences we offer packages that include chofers, package deal that hep you save on your next purchase as well as delivery options if you cant be there for instore pick up.
+    <p>Welcome to Osman’s Exotic Rentals, your premium luxury car rental service provider. We specialize in offering high-end luxury and exotic cars for rent at competitive prices. Our fleet includes the latest models from top brands, ensuring an unparalleled driving experience for our clients.</p>
+    <p>Contact Information:</p>
+    <ul>
+        <li>Address: 123 Main Street, Miami, Florida, 11210</li>
+        <li>Phone: +123-456-7890</li>
+        <li>Email: osmanrentals@gmail.com</li>
+    </ul>
+    <p>We're glad to announce a few of our services that aim to enhance our customers' experience. We offer chauffeurs, package deals to help you save on your next purchase, as well as delivery options if
     </div>
+    <div class="bottom-border"></div> <!-- Bottom border -->
 </body>
 </html>
