--- a/project4/oers.html
+++ b/project4/oers.html
@@ -4,25 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Osman Rentals</title>
+    <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Osman Rentals</title>
     <style>
         body {
             background-color: skyblue;
-            margin: 0; /* Remove default margin */
-            padding: 0; /* Remove default padding */
         }
-        /* Top border */
-        .top-border {
-            border-top: 5px solid black;
+        .Size {
+            width: 75%;
+            height: 350px;
         }
-        /* Bottom border */
-        .bottom-border {
-            position: absolute;
-            bottom: 0;
-            width: 100%;
-            border-bottom: 5px solid black;
-        }
-        /* Your existing styles */
-        /* ... (existing styles remain unchanged) ... */
         .smallSize {
             width: 350px;
             height: auto;
@@ -53,15 +48,14 @@
             width: 150px; /* Adjust size as needed */
         }
     </style>
-     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap">
-     <script>
-         function showCarDetails(carName, price) {
-             alert(`Car: ${carName}\nDetails: Luxury Car Rental\nPrice per day: $${price}`);
-         }
-     </script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap">
+    <script>
+        function showCarDetails(carName, price) {
+            alert(`Car: ${carName}\nDetails: Luxury Car Rental\nPrice per day: $${price}`);
+        }
+    </script>
 </head>
 <body>
-    <div class="top-border"></div> <!-- Top border -->
     <a href="#home">Home</a>
     <a href="#reservation-page">Reserve A Vehicle</a>
     <a href="#location">Location</a>
@@ -138,6 +132,5 @@
     </ul>
     <p>We're glad to announce a few of our services that aim to enhance our customers' experience. We offer chauffeurs, package deals to help you save on your next purchase, as well as delivery options if
     </div>
-    <div class="bottom-border"></div> <!-- Bottom border -->
 </body>
 </html>
