--- a/project4/oers.html
+++ b/project4/oers.html
@@ -10,6 +10,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Osman Rentals</title>
+    <link rel="shortcut icon" type="image/x-icon" href="../images/Lab14-1.png">
+
     <style>
         body {
             background-color: skyblue;
@@ -47,6 +49,9 @@
             margin-top: 10px;
             width: 150px; /* Adjust size as needed */
         }
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Whisper&display=swap" rel="stylesheet">
     </style>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap">
     <script>
