--- a/project4/oers.html
+++ b/project4/oers.html
@@ -139,3 +139,126 @@
     </div>
 </body>
 </html>
+
+
+
+
+
+body {
+    background-color: skyblue;
+    margin-top: 20px;
+    }
+
+.Size {
+    width: 75%;
+    height: 350px;
+}
+
+.smallSize {
+    width: 350px;
+    height: auto;
+}
+
+.centered-text {
+    text-align: center;
+}
+
+#home p {
+    font-family: 'Dancing Script', cursive;
+    font-size: 25px;
+}
+nav {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+nav a {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 10px;
+    text-decoration: none;
+    color: black;
+}
+
+nav a img {
+    margin-top: 10px;
+    width: 150px; 
+}
+
+iframe {
+    border: 0;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Segoe Script', cursive;
+    color: purple;
+    text-shadow: 2px 2px 2px #ccc; 
+}
+p {
+    font-family: 'Great Vibes', cursive; 
+    font-size: 20px;
+}
+#home p {
+    font-family: 'Great Vibes', cursive; 
+    font-size: 20px;
+    color: black;
+    text-shadow: 2px 2px 2px #ccc
+}
+
+
+
+
+
+
+
+
+
+nav {
+    background-color: #333; /* Dark background color for the navigation */
+    padding: 5px;
+    text-align: center;
+}
+nav a {
+    text-decoration: none;
+    color: white;
+    margin: 0 10px;
+}
+#home {
+    text-align: center;
+    padding: 20px;
+}
+h1 {
+    font-size: 36px;
+    margin-bottom: 10px;
+}
+p {
+    font-size: 18px;
+    line-height: 1.6;
+    color: black;
+}
+.Size {
+    width: 80%;
+    max-width: 600px;
+    height: auto;
+    display: block;
+    margin: 20px auto;
+}
+#cta {
+    text-align: center;
+    padding: 20px;
+    background-color:  #333; /* Light background for the call-to-action section */
+}
+.button {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color:  #555;
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+}
+.button:hover {
+    background-color: #555;
+}
