--- a/project4/practice1.html
+++ b/project4/practice1.html
@@ -1,97 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Osman Rentals - Home</title>
+    <title>Osman Rentals</title>
     <link rel="stylesheet" href="styles.css">
-    <style>
-        body {
-            margin-top: 20px; /* Adding margin at the top */
-            font-family: Arial, sans-serif; /* Setting a standard font */
-            background-color: #f4f4f4; /* Light background color */
-        }
-        /* Additional styles can be added in the styles.css file */
-        /* Styles specific to this page can be added here */
-        nav {
-            background-color: #333; /* Dark background color for the navigation */
-            color: white;
-            padding: 10px;
-            text-align: center;
-        }
-        nav a {
-            text-decoration: none;
-            color: white;
-            margin: 0 10px;
-        }
-        #home {
-            text-align: center;
-            padding: 20px;
-        }
-        h1 {
-            font-size: 36px;
-            margin-bottom: 10px;
-        }
-        p {
-            font-size: 18px;
-            line-height: 1.6;
-            color: #333;
-        }
-        .Size {
-            width: 80%;
-            max-width: 600px;
-            height: auto;
-            display: block;
-            margin: 20px auto;
-        }
-        #cta {
-            text-align: center;
-            padding: 20px;
-            background-color: #ddd; /* Light background for the call-to-action section */
-        }
-        .button {
-            display: inline-block;
-            padding: 10px 20px;
-            background-color: #333;
-            color: white;
-            text-decoration: none;
-            border-radius: 5px;
-            transition: background-color 0.3s;
-        }
-        .button:hover {
-            background-color: #555;
-        }
-        footer {
-            background-color: #333;
-            color: white;
-            text-align: center;
-            padding: 10px;
-            position: absolute;
-            bottom: 0;
-            width: 100%;
-        }
-    </style>
+    <link rel="shortcut icon" type="image/x-icon" href="../images/Lab14-1.png">
 </head>
+
 <body>
     <nav>
-        <a href="oersp1.html">Home</a>
-        <a href="oersp2.html">Reserve A Vehicle</a>
-        <a href="oersp3.html">Location</a>
+        <a href="practice1.html">Home</a>
+        <a href="practice2.html">Reserve A Vehicle</a>
+        <a href="practice3.html">Location</a>
     </nav>
     <section class="centered-text" id="home">
         <h1>Welcome to Osman’s Exotic Rentals</h1>
-        <p>
+        <p style="font-size: 25px;">
             Providing our clients with the best vehicles in the market at competitive prices. Our fleet includes high-end luxury/exotic cars from brands like Lamborghini, Ferrari, McLaren, Rolls Royce, and more. Choose your vehicle, make a reservation, and enjoy the ride.
         </p>
-        <a href="oersp2.html"><img class="Size" src="../project/media/home.jfif" alt="home"></a><br>
+        <a href="#reservation-page"><img class="Size" src="../project/media/home.jfif" alt="home"></a><br>
     </section>
     <section id="cta">
         <h2>Start Your Adventure</h2>
         <p>Ready to experience luxury? Reserve your dream car today!</p>
-        <a href="oersp2.html" class="button">Reserve Now</a>
+        <a href="practice2.html" class="button">Reserve Now</a>
     </section>
-    <footer>
-        <p>&copy; 2023 Osman Rentals</p>
-    </footer>
 </body>
+
 </html>
