--- a/IST322/PS5copy.html
+++ b/IST322/PS5copy.html
@@ -1,35 +1,129 @@
-<!DOCTYPE html>
+<!DOCTYPE html><!--I decided to make my own site-->
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="description" content="Find the best deals on Sony PS5, PS5 bundles, and PS5 deals at PlayStationMe.com. We offer the best prices on PS5 consoles and accessories.">
-  <meta name="keywords" content="Sony PS5, PS5 near me, PS5 bundles, PS5 deals, PS5 for sale">
-  <meta name="author" content="Your Name">
-  <title>PlayStationMe.com - Find the Best PS5 Deals Now!</title>
+  <meta name="keywords" content="Sony PS5, PS5 near me, PS5 bundles, PS5 deals, PS5 for sale"><!--Here is where i optimized the meta tag-->
+  <title>PlayStationMe.com - Find the Best PS5 Deals Now!</title><!--This is where I enhanced my title tag-->
   <link rel="stylesheet" href="styles.css">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+    }
+
+    header {
+      background-color: #007bff;
+      color: white;
+      padding: 20px;
+      text-align: center;
+    }
+
+    nav ul {
+      list-style-type: none;
+      padding: 0;
+    }
+
+    nav ul li {
+      display: inline;
+      margin-right: 20px;
+    }
+
+    nav ul li a {
+      color: white;
+      text-decoration: none;
+    }
+
+    main {
+      padding: 20px;
+      text-align: center;
+    }
+
+    footer {
+      background-color: #333;
+      color: white;
+      text-align: center;
+      padding: 10px;
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+    }
+
+    section {
+      padding-bottom: 50px;
+    }
+
+    img {
+      max-width: 100%;
+      height: auto;
+    }
+
+    .button {
+      background-color: #007bff;
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+      text-decoration: none;
+      font-size: 16px;
+    }
+
+    .button:hover {
+      background-color: #0056b3;
+    }
+
+    .shopping-cart-icon {
+      font-size: 24px;
+      color: #007bff;
+      margin-right: 10px;
+    }
+    @media only screen and (max-width: 600px)
+     {
+      header {
+        padding: 10px;
+      }
+      nav ul li {
+        margin-right: 10px;
+      }
+      main {
+        padding: 10px;
+      }
+      section {
+        padding-bottom: 20px;
+      }
+      img {
+        max-width: 100%;
+        height: auto;
+      }
+      .button {
+        font-size: 14px;
+        padding: 8px 16px;
+      }
+      .shopping-cart-icon {
+        font-size: 20px;
+      }
+    }
+  </style>
 </head>
 <body>
   <header>
     <h1>We Have the Best PS5 Deals!</h1>
     <nav>
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="PS5copy.html">Home</a></li>
+        <li><a href="About.html">About</a></li>
+        <li><a href="Contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
   <main>
     <section>
-      <h2>Featured PS5 Deal:</h2>
-      <div class="ps5-listing">
-        <img src="/images/ps5.jpg" alt="Sony PlayStation 5">
-        <div class="ps5-details">
-          <h3>PS5 Console</h3>
-          <p>Experience next-gen gaming with the powerful PS5 console. Get it now at the best price!</p>
-          <button>Buy Now - $499.99</button>
-        </div>
-      </div>
+      <h2>Welcome to PlayStationMe.com!</h2>
+      <p>Explore our unbeatable deals on the latest Sony PS5 consoles, bundles, and accessories.</p>
+      <img src="../images/ps5black.jpg" alt="Sony PlayStation 5">
+      <a href="About.html" class="button">Shop Now</a>
     </section>
   </main>
   <footer>
