--- a/IST322/About.html
+++ b/IST322/About.html
@@ -12,9 +12,9 @@
     <h1>About Us</h1>
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="PS5copy.html">Home</a></li>
+        <li><a href="About.html">About</a></li>
+        <li><a href="Contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
@@ -22,6 +22,15 @@
     <section>
       <h2>About PlayStationMe.com</h2>
       <p>Welcome to PlayStationMe.com, your ultimate destination for finding the best deals on Sony PS5 consoles, bundles, and accessories. Our mission is to provide gamers with access to top-quality products at unbeatable prices. With a passion for gaming and a commitment to customer satisfaction, we strive to make your shopping experience enjoyable and rewarding.</p>
+          <h2>Featured PS5 Deal:</h2>
+          <div class="ps5-listing">
+            <img src="../images/ps5.jpg" alt="Sony PlayStation 5" width="500">
+            <div class="ps5-details">
+              <h3>PS5 Console</h3>
+              <p>Experience next-gen gaming with the powerful PS5 console. Get it now at the best price!</p>
+              <button>Buy Now - $450.00</button>
+            </div>
+      </main>
     </section>
   </main>
   <footer>
