--- a/IST322/About.html
+++ b/IST322/About.html
@@ -12,7 +12,7 @@
     <h1>About Us</h1>
     <nav>
       <ul>
-        <li><a href="PS5copy.html">Home</a></li>
+        <li><a href="playstationme.html">Home</a></li>
         <li><a href="About.html">About</a></li>
         <li><a href="Contact.html">Contact</a></li>
       </ul>
