--- a/IST322/playstationme.html
+++ b/IST322/playstationme.html
@@ -112,7 +112,7 @@
     <h1>We Have the Best PS5 Deals!</h1>
     <nav>
       <ul>
-        <li><a href="PS5copy.html">Home</a></li>
+        <li><a href="playstationme.html">Home</a></li>
         <li><a href="About.html">About</a></li>
         <li><a href="Contact.html">Contact</a></li>
       </ul>
