--- a/IST322/playstationme.html
+++ b/IST322/playstationme.html
@@ -6,6 +6,15 @@
   <meta name="keywords" content="Sony PS5, PS5 near me, PS5 bundles, PS5 deals, PS5 for sale"><!--Here is where i optimized the meta tag-->
   <title>PlayStationMe.com - Find the Best PS5 Deals Now!</title><!--This is where I enhanced my title tag-->
   <link rel="stylesheet" href="styles.css">
+    <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-305657766-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-305657766-1');
+  </script>
   <style>
     body {
       font-family: Arial, sans-serif;
