--- a/IST322/About.html
+++ b/IST322/About.html
@@ -6,6 +6,15 @@
   <meta name="author" content="Your Name">
   <title>About Us - PlayStationMe.com</title>
   <link rel="stylesheet" href="styles.css">
+    <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-305657766-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-305657766-1');
+  </script>
 </head>
 <body>
   <header>
