--- a/IST322/Contact.html
+++ b/IST322/Contact.html
@@ -23,6 +23,7 @@
       <ul>
         <li><a href="playstationme.html">Home</a></li>
         <li><a href="About.html">About</a></li>
+        <li><a href="landingpage.html"></a></li>
         <li><a href="Contact.html">Contact</a></li>
       </ul>
     </nav>
