--- a/IST322/landingpage.html
+++ b/IST322/landingpage.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="description" content="About PlayStationMe.com">
   <meta name="author" content="Your Name">
-  <title>About Us - PlayStationMe.com</title>
+  <title>Bundles & Deals - PlayStationMe.com</title>
   <link rel="stylesheet" href="styles.css">
     <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-305657766-1"></script>
