--- a/IST322/landingpage.html
+++ b/IST322/landingpage.html
@@ -18,7 +18,7 @@
 </head>
 <body>
   <header>
-    <h1>About Us</h1>
+    <h1>Bundles & Deals</h1>
     <nav>
       <ul>
         <li><a href="playstationme.html">Home</a></li>
@@ -30,7 +30,7 @@
   </header>
   <main>
     <section>
-      <h2>About PlayStationMe.com</h2>
+      <h2>Budnles & Deals PlayStationMe.com</h2>
       <p>Welcome to PlayStationMe.com, your ultimate destination for finding the best deals on Sony PS5 consoles, bundles, and accessories. Our mission is to provide gamers with access to top-quality products at unbeatable prices. With a passion for gaming and a commitment to customer satisfaction, we strive to make your shopping experience enjoyable and rewarding.</p>
           <h2>Featured PS5 Deal:</h2>
           <div class="ps5-listing">
