--- a/IST322/landingpage.html
+++ b/IST322/landingpage.html
@@ -23,7 +23,7 @@
       <ul>
         <li><a href="playstationme.html">Home</a></li>
         <li><a href="About.html">About</a></li>
-        <li><a href="landingpage.html"></a></li>
+        <li><a href="landingpage.html">Bundles & Deals</a></li>
         <li><a href="Contact.html">Contact</a></li>
       </ul>
     </nav>
