--- a/IST322/Aboutcopy.html
+++ b/IST322/Aboutcopy.html
@@ -12,10 +12,10 @@
     <h1>About Us</h1>
     <nav>
       <ul>
-        <li><a href="playstationme.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="bundles.html">Bundles & Deals</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="playstationmecopy.html">Home</a></li>
+        <li><a href="Aboutcopy.html">About</a></li>
+        <li><a href="landingpagecopy.html">Bundles & Deals</a></li>
+        <li><a href="Contactcopy.html">Contact</a></li>
       </ul>
     </nav>
   </header>
