--- a/IST322/Contact.copy.html
+++ b/IST322/Contact.copy.html
@@ -21,10 +21,10 @@
     <h1>Contact Us</h1>
     <nav>
       <ul>
-        <li><a href="playstationme.html">Home</a></li>
-        <li><a href="About.html">About</a></li>
-        <li><a href="landingpage.html"></a></li>
-        <li><a href="Contact.html">Contact</a></li>
+        <li><a href="playstationmecopy.html">Home</a></li>
+        <li><a href="Aboutcopy.html">About</a></li>
+        <li><a href="landingpagecopy.html">Bundles & Deals</a></li>
+        <li><a href="Contactcopy.html">Contact</a></li>
       </ul>
     </nav>
   </header>
