--- a/IST322/landingpage.html
+++ b/IST322/landingpage.html
@@ -2,19 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="description" content="About PlayStationMe.com">
+  <meta name="description" content="Bundles & Deals at PlayStationMe.com">
   <meta name="author" content="Your Name">
-  <title>Bundles & Deals</title>
+  <title>Bundles & Deals - PlayStationMe.com</title>
   <link rel="stylesheet" href="styles.css">
-    <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-305657766-1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'UA-305657766-1');
-  </script>
 </head>
 <body>
   <header>
@@ -30,21 +21,5 @@
   </header>
   <main>
     <section>
-      <h2>Budnles & Deals PlayStationMe.com</h2>
-      <p>Welcome to PlayStationMe.com, your ultimate destination for finding the best deals on Sony PS5 consoles, bundles, and accessories. Our mission is to provide gamers with access to top-quality products at unbeatable prices. With a passion for gaming and a commitment to customer satisfaction, we strive to make your shopping experience enjoyable and rewarding.</p>
-          <h2>Featured PS5 Deal:</h2>
-          <div class="ps5-listing">
-            <img src="../images/ps5.jpg" alt="Sony PlayStation 5" width="500">
-            <div class="ps5-details">
-              <h3>PS5 Console</h3>
-              <p>Experience next-gen gaming with the powerful PS5 console. Get it now at the best price!</p>
-              <button>Buy Now - $450.00</button>
-            </div>
-      </main>
-    </section>
-  </main>
-  <footer>
-    <p>&copy; 2024 PlayStationMe.com. All rights reserved.</p>
-  </footer>
-</body>
-</html>
+      <h2>Bundles & Deals at PlayStationMe.com</h2>
+     
