--- a/IST322/landingpagecopy.html
+++ b/IST322/landingpagecopy.html
@@ -1,31 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="description" content="Bundles & Deals at PlayStationMe.com">
-    <meta name="author" content="Your Name">
-    <title>Bundles & Deals - PlayStationMe.com</title>
-    <link rel="stylesheet" href="styles.css">
-    </head>
-    <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-305657766-1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'UA-305657766-1');
-  </script>
+  <meta charset="UTF-8">
+  <meta name="description" content="Bundles & Deals at PlayStationMe.com">
+  <meta name="author" content="Your Name">
+  <title>Bundles & Deals - PlayStationMe.com</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
     <h1>Bundles & Deals</h1>
     <nav>
       <ul>
-        <li><a href="playstationme.html">Home</a></li>
-        <li><a href="About.html">About</a></li>
-        <li><a href="landingpage.html"></a></li>
-        <li><a href="Contact.html">Contact</a></li>
+        <li><a href="playstationmecopy.html">Home</a></li>
+        <li><a href="Aboutcopy.html">About</a></li>
+        <li><a href="landingpagecopy.html">Bundles & Deals</a></li> <!-- Fixed the href attribute -->
+        <li><a href="Contactcopy.html">Contact</a></li>
       </ul>
     </nav>
   </header>
@@ -33,21 +23,14 @@
     <section>
       <h2>Bundles & Deals at PlayStationMe.com</h2>
       <p>Welcome to PlayStationMe.com, your ultimate destination for finding the best deals on Sony PS5 consoles, bundles, and accessories. Our mission is to provide gamers with access to top-quality products at unbeatable prices. With a passion for gaming and a commitment to customer satisfaction, we strive to make your shopping experience enjoyable and rewarding.</p>
-          <h2>Featured PS5 Deal:</h2>
-          <div class="ps5-listing">
-            <img src="../images/ps5.jpg" alt="Sony PlayStation 5" width="500">
-            <div class="ps5-details">
-              <h3>PS5 Console</h3>
-              <p>Experience next-gen gaming with the powerful PS5 console. Get it now at the best price!</p>
-              <button>Buy Now - $450.00</button>
-            </div>
-      </main>
-    </section>
-  </main>
-  <footer>
-    <p>&copy; 2024 PlayStationMe.com. All rights reserved.</p>
-  </footer>
-</body>
-</html>
+      <h2>Featured PS5 Deal:</h2>
+      <div class="ps5-listing">
+        <img src="../images/ps5.jpg" alt="Sony PlayStation 5" width="500">
+        <div class="ps5-details">
+          <h3>PS5 Console</h3>
+          <p>Experience next-gen gaming with the powerful PS5 console. Get it now at the best price!</p>
+          <button>Buy Now - $450.00</button>
+      
+
 
      
