--- a/IST322/Contact.copy.html
+++ b/IST322/Contact.copy.html
@@ -1,42 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="description" content="Contact PlayStationMe.com">
-  <meta name="author" content="Your Name">
-  <title>Contact Us - PlayStationMe.com</title>
-  <link rel="stylesheet" href="styles.css">
-    <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-305657766-1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'UA-305657766-1');
-  </script>
+    <meta charset="UTF-8">
+    <meta name="description" content="Contact PlayStationMe.com">
+    <meta name="author" content="Your Name">
+    <title>Contact Us - PlayStationMe.com</title>
+    <link rel="stylesheet" href="styles.css">
+      <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-305657766-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+  
+      gtag('config', 'UA-305657766-1');
+    </script>
 </head>
 <body>
   <header>
     <h1>Contact Us</h1>
     <nav>
       <ul>
-        <li><a href="playstationmecopy.html">Home</a></li>
-        <li><a href="Aboutcopy.html">About</a></li>
-        <li><a href="landingpagecopy.html">Bundles & Deals</a></li>
-        <li><a href="Contactcopy.html">Contact</a></li>
+        <li><a href="playstationme.html">Home</a></li>
+        <li><a href="About.html">About</a></li>
+        <li><a href="landingpage.html"></a></li>
+        <li><a href="Contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
   <main>
     <section>
-      <h2>Contact Information</h2>
-      <p>Have questions or feedback? We'd love to hear from you! Feel free to reach out to us through the following channels:</p>
-      <ul>
-        <li>Email: contact@playstationme.com</li>
-        <li>Phone: 1-800-PLAY-PS5</li>
-        <li>Address: 1234 Gaming Street, Cityville, State, Zip</li>
-      </ul>
+        <h2>Contact Information</h2>
+        <p>Have questions or feedback? We'd love to hear from you! Feel free to reach out to us through the following channels:</p>
+        <ul>
+          <li>Email: contact@playstationme.com</li>
+          <li>Phone: 1-800-PLAY-PS5</li>
+          <li>Address: 1234 Gaming Street, Cityville, State, Zip</li>
+        </ul>
     </section>
   </main>
   <footer>
@@ -44,3 +44,4 @@
   </footer>
 </body>
 </html>
+
