--- a/IST322/Aboutcopy.html
+++ b/IST322/Aboutcopy.html
@@ -1,7 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="description" content="About PlayStationMe.com">
+    <meta name="author" content="Your Name">
+    <title>About Us - PlayStationMe.com</title>
+    <link rel="stylesheet" href="styles.css">
+      <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-305657766-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
   
+      gtag('config', 'UA-305657766-1');
+    </script>
 </head>
 <body>
   <header>
